@@ -148,18 +148,25 @@ sub get_vendor_object {
     return $OBJECT_CACHE{$vendor} if exists $OBJECT_CACHE{$vendor};
 
     my ($obj, @names);
-    if ($vendor ne 'Default') {
-        push @names, $vendor, lc($vendor), ucfirst($vendor), ucfirst(lc($vendor));
-    }
-    foreach my $name (@names, 'Default') {
+    push @names, $vendor, lc($vendor), ucfirst($vendor), ucfirst(lc($vendor));
+
+    foreach my $name (@names) {
         eval qq{
             require Dpkg::Vendor::$name;
             \$obj = Dpkg::Vendor::$name->new();
         };
-        last unless $@;
+        unless ($@) {
+            $OBJECT_CACHE{$vendor} = $obj;
+            return $obj;
+        }
     }
-    $OBJECT_CACHE{$vendor} = $obj;
-    return $obj;
+
+    my $info = get_vendor_info($vendor);
+    if (defined $info and defined $info->{'Parent'}) {
+        return get_vendor_object($info->{'Parent'});
+    } else {
+        return get_vendor_object('Default');
+    }
 }
 
 =item Dpkg::Vendor::run_vendor_hook($hookid, @params)
