@@ -1,0 +1,4 @@
+Vendor: gNewSense
+Vendor-URL: http://www.gnewsense.org/
+Bugs: https://savannah.nongnu.org/bugs/?group=gnewsense
+Parent: Debian
